syntax = "proto3";

service Movie {
    rpc GetMovieByID(MovieID) returns (MovieData) {}
    rpc GetListMovies(Empty) returns (stream MovieData) {}
    rpc GetMovieByTitle(MovieTitle) returns (MovieData) {}
    rpc CreateMovie(MovieData) returns (NotificationMessage) {}
}

message MovieID {
    string id = 1;
}

message MovieData {
    string title = 1;
    float rating = 2;
    string director = 3;
    string id = 4;
}

message MovieTitle{
    string title = 1;
}

message NotificationMessage{
    string message = 1;
}

message Empty {
}